--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "env-cmd": "^10.1.0",
     "gatsby": "^2.24.54",
     "gatsby-plugin-sass": "^2.3.13",
+    "gatsby-source-filesystem": "^2.3.30",
+    "gatsby-transformer-remark": "^2.8.35",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
