--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "env-cmd": "^10.1.0",
     "gatsby": "^2.24.54",
     "gatsby-plugin-sass": "^2.3.13",
+    "gatsby-plugin-sharp": "^2.6.38",
+    "gatsby-remark-images": "^3.3.32",
+    "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-filesystem": "^2.3.30",
     "gatsby-transformer-remark": "^2.8.35",
     "node-sass": "^4.14.1",
