--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-sharp": "^2.6.38",
     "gatsby-remark-images": "^3.3.32",
     "gatsby-remark-relative-images": "^2.0.2",
+    "gatsby-source-contentful": "^2.3.49",
     "gatsby-source-filesystem": "^2.3.30",
     "gatsby-transformer-remark": "^2.8.35",
     "node-sass": "^4.14.1",
