--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^14.1.1",
     "env-cmd": "^10.1.0",
     "gatsby": "^2.24.54",
     "gatsby-plugin-sass": "^2.3.13",
