--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@contentful/rich-text-react-renderer": "^14.1.1",
     "env-cmd": "^10.1.0",
     "gatsby": "^2.24.54",
+    "gatsby-plugin-react-helmet": "^3.3.12",
     "gatsby-plugin-sass": "^2.3.13",
     "gatsby-plugin-sharp": "^2.6.38",
     "gatsby-remark-images": "^3.3.32",
@@ -26,7 +27,8 @@
     "gatsby-transformer-remark": "^2.8.35",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "2.1.1"
